<resources>
    <string name="app_name">Lokal.ind</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="cart">Keranjang</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profil</string>
    <string name="recommendation">Recommendation</string>
    <string name="explore">Explore</string>
    <string name="brand">Brand</string>
    <string name="type">Type</string>
    <string name="price">Harga</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="title_description_product">Description</string>
    <string name="description_product">This is text for product description</string>
    <string name="product_name">Product Name</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="message">Message</string>
    <string name="subtotal">Subtotal</string>
    <string name="username">Username</string>
    <string name="title_name">Name</string>
    <string name="icon_person">Icon Person</string>
    <string name="name">Nama</string>
    <string name="icon_email">Icon Email</string>
    <string name="title_email">Email</string>
    <string name="email">Email</string>
    <string name="icon_phone">Icon Phone</string>
    <string name="title_phone">Phone Number</string>
    <string name="phone">Nomor Telpon</string>
    <string name="official_brand">Official Brand</string>
    <string name="login">Login</string>
    <string name="btn_delete">Button delete</string>
    <string name="btn_category">Button category</string>
    <string name="order_history">Order History</string>
    <string name="icon_order_history">Icon order history</string>
    <string name="category_name">Category name</string>
    <string name="btn_myshop">Button my shop</string>
    <string name="myshop">My Shop</string>
    <string name="icon_myshop">Icon my shop</string>
    <string name="shopname">Shop name</string>
    <string name="myproduct">Produk Saya</string>
    <string name="btn_myproduct">Button my product</string>
    <string name="icon_addproduct">Icon add product</string>
    <string name="addproduct">Tambah Produk</string>
    <string name="btn_addproduct">Button add product</string>
    <string name="icon_orders">Icon Orders</string>
    <string name="orders">Pesanan</string>
    <string name="btn_orders">Button orders</string>
    <string name="manageyourshop">Kelola Toko Anda</string>
    <string name="gallery">Tambah Foto</string>
    <string name="name_product">Name</string>
    <string name="description">Deskripsi</string>
    <string name="upload">Unggah</string>
    <string name="description_hint">Masukkan Deskripsi</string>
    <string name="name_hint">Enter name</string>
    <string name="category">Kategori</string>
    <string name="stock">Stok</string>
    <string name="stock_hint">Masukkan Stok</string>
    <string name="price_hint">Masukkan Harga</string>


    <string name="searchbar_hint">Masukkan kata</string>

    <string name="tab_text_1">Orders</string>
    <string name="tab_text_2">History</string>
    <string name="productbycategories">Product by category</string>
    <string name="icon_address">Icon Address</string>
    <string name="title_address">Address</string>
    <string name="address">Alamat</string>
    <string name="Total">Jumlah</string>
    <string name="my_order">Pesanan Saya</string>
    <string name="sign_up">Daftar</string>
    <string name="tagline_login">Cari Yang Lokal Lokal.Ind Aja</string>
    <string name="login_signup_warning">Isi Data Diri</string>
    <string name="name_fill">Masukkan Nama</string>
    <string name="address_fill">Masukkan Alamat</string>
    <string name="phone_fill">Masukkan Nomor</string>
    <string name="password">Password</string>
    <string name="Shop">Toko Saya</string>
    <string name="welcome_to_your_shop">Selamat Datang</string>
    <string name="lokals">Lokals</string>
    <string name="income">Penghasilan</string>
    <string name="wallet_fill">Rp.0,000,000,000</string>
    <string name="menu">Menu</string>
    <string name="hello">Hello,</string>
    <string name="cateogry">Kategori</string>
    <string name="recycle">Recycle</string>
    <string name="wallet">Dompet</string>
    <string name="tagline_pofille">Lihat Yang Menarik</string>
    <string name="tagline_login_2">Nikmati Berbelanja Barang Lokal</string>
    <string name="signup_reminder">Tidak Punya akun?</string>
    <string name="hai_lokals">Hai lokals</string>
    <string name="tagline_menu">Login dan nikmati belanja barang lokal</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="fee_delivery">Fee Delivery</string>
    <string name="application_fee">Application Fee</string>
    <string name="total">Total</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="image">Foto</string>
    <string name="choose_categories">Pilih Kategori</string>
    <string name="size">Size</string>
    <string name="size_hint">Enter size</string>
    <string name="rating">Rating</string>
    <string name="rating_hint">Enter rating</string>
    <string name="pilih_payment">Pilih Pembayaran</string>
    <string name="choose_shippers">Pilih Pengirim</string>
    <string name="shippers">Pengirim</string>
    <string name="pay">Bayar</string>

</resources>