<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lokalin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_recycleFragment"
            app:destination="@id/recycleFragment" />
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.lokalin.ui.categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.lokalin.ui.home.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.example.lokalin.ui.wishlist.WishlistFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.lokalin.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/recycleFragment"
        android:name="com.example.lokalin.ui.recycle.RecycleFragment"
        android:label="fragment_recycle"
        tools:layout="@layout/fragment_recycle" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.lokalin.ui.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />


</navigation>