<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_profile"
            android:padding="40dp"
            android:paddingStart="15dp"
            android:paddingTop="40dp"
            android:paddingEnd="15dp"
            android:paddingBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/img_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_product"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_profile"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_product" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:background="@android:color/transparent"
                app:icon="@drawable/ic_baseline_logout_24"
                app:iconTint="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/lay_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bottom_border_profile"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            app:layout_constraintBottom_toTopOf="@id/lay_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_bar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/icon_person"
                    android:src="@drawable/baseline_person_24" />

                <TextView
                    android:id="@+id/title_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bottom_border_profile"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            app:layout_constraintBottom_toTopOf="@id/lay_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lay_name">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/icon_email"
                    android:src="@drawable/baseline_email_24" />

                <TextView
                    android:id="@+id/title_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_email"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bottom_border_profile"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            app:layout_constraintBottom_toBottomOf="@id/lay_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lay_email">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/icon_phone"
                    android:src="@drawable/baseline_phone_android_24" />

                <TextView
                    android:id="@+id/title_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_phone"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_grey"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lay_phone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/icon_order_history"
                    android:src="@drawable/baseline_order_history_24" />

                <TextView
                    android:id="@+id/title_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_history"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_category"
                android:src="@drawable/baseline_keyboard_arrow_right_24" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>