<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_product"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:scaleType="fitXY"
        android:src="@drawable/erigo"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:text="@string/brand"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_product" />

    <TextView
        android:id="@+id/txt_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/price"
        android:textColor="#B31312"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txt_price"/>

    <TextView
        android:id="@+id/txt_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/type"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txt_brand"/>


</androidx.constraintlayout.widget.ConstraintLayout>