<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_product"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_product"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/type" />

    <TextView
        android:id="@+id/tv_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_product"
        app:layout_constraintTop_toBottomOf="@id/tv_type"
        tools:text="@string/brand" />

    <TextView
        android:id="@+id/tv_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_blue"
        android:backgroundTint="@color/ligh_grey"
        android:layout_marginEnd="6dp"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_process"
        app:layout_goneMarginStart="4dp"
        tools:text="@string/brand" />


    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_product"
        app:layout_constraintTop_toBottomOf="@id/tv_brand"
        tools:text="@string/price" />

    <TextView
        android:id="@+id/tv_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/background_blue"
        android:contentDescription="@string/btn_delete"
        android:padding="6dp"
        android:text="Diproses"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_price" />

</androidx.constraintlayout.widget.ConstraintLayout>
